improve the design

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main>
         <div class="container">
             <section class="todo--outer--container">
-
+                <h3>Todo Items</h3>
                 <div id="addTodo">
-                    <input type="text" name="addTodo" id="addTodo">
+                    <input type="text" name="addTodo" id="addTodoInput">
                     <button>Add Todo</button>
                 </div>
 
@@ -33,7 +33,7 @@
             </section>
 
             <section id="todoDoneItems">
-
+                <h3>Done Items</h3>
             </section>
             
         </div>
