add save and load localStorage

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="container">
             <p>Todo List</p>
         </div>
+        <button>Save</button>
     </header>
 
     <main>
